# hackduke2026

./: .gitignore  ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  QUICKSTART.md  ROADMAP.md  SETUP.md  VERCEL_DEPLOYMENT.md  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
backend/: .env.example  env.example  main.py  pyproject.toml  requirements.txt  ticker_bank.py  voice_assistant.py
backend/app/: BullBear-Analysis-Prompt.md  agent.py  ai_agents.py  cache_manager.py  database.py  event_analyzer.py
database/: schema.sql
frontend/: .gitignore  package-lock.json  package.json
frontend/api/backend/: requirements.txt
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/stock-data/: route.ts
frontend/app/api/summarize/: route.ts
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: BullBearAnalysis.tsx  BullBearAnalysisPanel.tsx  Dashboard.tsx  DashboardLayout.tsx  DotMatrixBackground.tsx  EarthDotOverlay.tsx  Header.tsx  LocaleBootstrap.tsx  NewsSummaryPanel.tsx  Onboarding.tsx  OptimizedDotBackground.tsx  Particle3DBackground.tsx  QuickActions.tsx  ShootingStarsOverlay.tsx  Sidebar.tsx  StockCard.tsx  StockPill.tsx  ToroVoiceButton.tsx  VoiceNewsButton.tsx  WealthVisorChat.tsx
frontend/lib/: api.ts  locale.ts  uiCopy.ts  useAppLocale.ts
