[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toro-backend"
version = "1.0.0"
description = "Toro FastAPI Backend"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Toro Team", email = "team@toro.com"},
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "yfinance==0.2.40",
    "requests==2.32.3",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.0",
    "textblob==0.18.0.post0",
    "python-dateutil==2.9.0.post0",
    "elevenlabs==1.59.0",
    "google-generativeai==0.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.setuptools.package-dir]
"" = "."

# Render deployment configuration
[tool.render]
# This tells Render to use Python
runtime = "python3"

# Build command (optional, Render can auto-detect)
build = "pip install -e ."

# Start command
start = "uvicorn main:app --host 0.0.0.0 --port $PORT"